--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=global1
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
 spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.database=postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5232/dev
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.jpa.database=postgresql
+#spring.datasource.url=jdbc:postgresql://localhost:5232/dev
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
